[project]
name = "fastrtc-kroko"
version = "0.1.0"
description = "The realtime communication library for Python. With support for Kroko-ASR model."
licence = "apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastrtc[vad, stt]",
    "librosa",
    "numpy>=2.0.2",
    "sherpa-onnx",
    "click",
    "torch"
]
